--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -20,7 +20,7 @@
 <body>
   <div id="contents"></div>
   <script src="/env.js"></script>  
-  <script src="/App.js"></script>
+  <script src="/app.bundle.js"></script>
 </body>
 
 </html>
