--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -4,13 +4,6 @@
 <head>
   <meta charset="utf-8">
   <title>Pro MERN Stack</title>
-
-  <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
-  <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-  <script src="https://unpkg.com/prop-types@15/prop-types.js"></script>
-  
-  <script src="https://unpkg.com/@babel/polyfill@7/dist/polyfill.min.js"></script>
-  <script src="https://unpkg.com/whatwg-fetch@3.0.0/dist/fetch.umd.js"></script>
   <style>
     table.bordered-table th, td {border: 1px solid silver; padding: 4px;}
     table.bordered-table {border-collapse: collapse;}
@@ -19,7 +12,8 @@
 
 <body>
   <div id="contents"></div>
-  <script src="/env.js"></script>  
+  <script src="/env.js"></script>
+  <script src="/vendor.bundle.js"></script>
   <script src="/app.bundle.js"></script>
 </body>
 
