--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -7,7 +7,8 @@
   <style>
     table.bordered-table th, td {border: 1px solid silver; padding: 4px;}
     table.bordered-table {border-collapse: collapse;}
-    </style>
+    a.active {background-color: #D8D8F5;}
+  </style>
 </head>
 
 <body>
